[tool.poetry]
package-mode=false
name = "short-links"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.43"
pydantic-settings = "^2.10.1"
aiosqlite = "^0.21.0"
ruff = "^0.12.9"
pydantic = "^2.11.7"
alembic = "^1.16.4"
validators = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.isort]
known-first-party = ["src", ]
known-third-party = ["sqlalchemy", "pydantic", "fastapi",]
default-section = "THIRDPARTY"
section-order = ["STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 5

[tool.ruff.format]
quote-style = "double"
indent-style = "space"